# space-boxes

./: .clang-format  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: bullet.hpp  enemy.hpp  main.cpp  player.hpp  randomizer.hpp  wall.hpp
assets/shaders/: bullet.frag  cube.frag  cube.vert  debug.frag  debug.vert  enemy.frag  floor.frag  floor.vert  player.frag  wall.frag
core/: CMakeLists.txt
core/include/core/: camera.hpp  collider.hpp  collider_buffer.hpp  collision.hpp  collision_aware.hpp  collision_aware_cube.hpp  cube.hpp  cube_buffer.hpp  debug_buffer.hpp  object.hpp  object_buffer.hpp  scene.hpp  shader.hpp  texture.hpp  transform.hpp  uuid.hpp
core/src/: camera.cpp  collider.cpp  cube.cpp  scene.cpp  shader.cpp  texture.cpp
dependencies/: CMakeLists.txt
dependencies/glad/: glad.c
dependencies/glad/include/glad/: glad.h
